DE416 fixed text wrapping and tooltip position / flicker

--- a/app/scss/calendar/quickview/_qvChartDefaults.scss
+++ b/app/scss/calendar/quickview/_qvChartDefaults.scss
@@ -244,6 +244,7 @@
         font-size: $fontSizeSmall;
         color: $TPGrey3;
         margin:7px 0 6px 0;
+        white-space: nowrap;
 
         .tooltipLabel
         {
